# AutonomousQUAD

./: CMakeLists.txt  README.md  inference.cpp  inference.h  main.cpp  ultrasonidos.cpp
